package pizza.impl;

import pizza.Pizza;

public class PizzaCheeseStyleBrest extends Pizza {
	public PizzaCheeseStyleBrest() {
		name = "Pizza with Brest style sauce and cheese";
		crust = "Thick crust";
		sauce = "White sauce";
		garnitures.add("Parmigiano reggiano");
	}
}
