package pizza.impl;

import pizza.Pizza;

public class PizzaPoivronStyleStrasbourg extends Pizza {
	public PizzaPoivronStyleStrasbourg() {
		name = "Pizza with Brest style sauce and cheese";
		crust = "Thick crust";
		sauce = "White sauce";
		garnitures.add("Parmigiano reggiano");
	}
}
